--- a/sign.css
+++ b/sign.css
@@ -1,15 +1,18 @@
 * {
-    margin: 0px;
-    padding: 0px;
+
     box-sizing: border-box;
 }
+
 .container-fluid {
-    background-image: url(/image/background/login-background.jpg);
+    background-image: url(/image/background/red-shirt-gift-boxes-copy-space.jpg);
     background-size: cover;
     justify-content: center;
     height: 100vh;
 }
 
+.left {
+    width: 45%;
+}
 
 .head .nav-item {
     display: flex;
@@ -22,18 +25,175 @@
     border-color: white;
     align-items: center;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
-  
+    color: white;
+
 }
 
 .head .nav-item li {
-    margin-left:20px;
+    margin-left: 20px;
+    backdrop-filter: blur(50px);
+    border-radius: 4px;
 
 
 }
+
 .white-text {
     color: white;
 }
 
 
+input::placeholder {
+    color: white;
 
 
+}
+
+#f-name,
+#l-name,
+#pass,
+#email {
+    background: transparent;
+    text-align: left;
+    width: 15vw;
+    height: 8vh;
+    margin: 0 0 20px 0;
+    line-height: 40%;
+
+}
+
+input {
+    border-radius: 4px;
+    background: transparent;
+    backdrop-filter: blur(10px);
+
+}
+
+.class,
+h1 {
+
+    color: white;
+    text-align: center;
+}
+
+#create {
+    color: white;
+    width: 70%;
+    height: 8%;
+    margin-bottom:4% ;
+    margin-left: 10%;
+
+}
+#create:hover{
+    background-color: red;
+}
+
+.hero {
+    display: flex;
+}
+
+.right {
+    position: relative;
+    width: 40vw;
+    height: 40vw;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    margin-left: 20%;
+}
+
+.right img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: blur(5px);
+}
+
+.description {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #ffffff;
+    border-radius: 10px;
+    width: 80%;
+}
+
+.description h2 {
+    margin-bottom: 10px;
+}
+
+.description p {
+    margin: 0;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+    line-height: 10px;
+    margin: 0 40px 0 0;
+
+
+
+
+}
+
+.flex {
+    display: flex;
+
+
+
+}
+
+.description {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    opacity: 0;
+    text-align: center;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #ffffff;
+    border-radius: 10px;
+    width: 80%;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+.description-1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+    text-align: center;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #ffffff;
+    border-radius: 10px;
+    width: 80%;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+.right:hover .description-1 {
+    transform: translate(-50%, -50%) scale(0);
+    opacity: 0;
+}
+
+.right:hover .description {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+}
+
+form {
+    border: rgb(234, 6, 6) 1px inset;
+    border-radius: 20px;
+    width: 100%;
+    height: 80%;
+    align-content: center;
+    padding-left: 10%;
+
+    box-shadow: 8px 14px 10px rgba(234, 6, 6, 0.6);
+
+}
